# retrievers

./: .gitignore  README.md  package-lock.json  package.json  pydoc-markdown.yaml  pydoc-markdown3.yaml  pyproject.toml
.github/workflows/: docs_update.yaml
docs/: docs.json  docs2.json  dspy-intellisense.mdx  index.mdx  mintlify_tips.mdx
docs/guides/: index.mdx
docs/guides/agents/: auto_agent.mdx  packaging_an_agent.mdx  precompiled_agent.mdx
docs/guides/context/: context_class_intro.mdx  custom_context.mdx
docs/guides/databases/: graph_db.mdx  sql_db.mdx  vdb_alchemy.mdx
docs/guides/retrievers/: retrievers.mdx
docs/guides/storage/: file_stores.mdx
docs/sdk_reference/retrievers/: exceptions.mdx  indexing.mdx  query_language.mdx  types.mdx
docs/sdk_reference/vdb_alchemy/: __init__.mdx  exceptions.mdx  indexing.mdx  query_language.mdx  types.mdx
retrievers/: __init__.py  exceptions.py  indexing.py  query_language.py  types.py
retrievers/context/: base.py  table.py  text.py
retrievers/databases/: graph_database.py
retrievers/databases/vector_database/: vector_database.py
retrievers/storage/: file_store.py
tests/: test_query_language.py  test_types.py  utils.py
tests/artifacts/test_dir_excel/: 1st_New_Zealand_Parliament_0.xlsx  2._Bundesliga_0.xlsx  2nd_New_Zealand_Parliament_0.xlsx  3rd_Infantry_Division_(United_States)_0.xlsx  3rd_Legislative_Assembly_of_Saskatchewan_1.xlsx
tests/context/: test_base.py  test_table.py  test_text.py
tests/databases/: test_graph_database.py  test_sql_database.py
tests/databases/vector_database/: test_milvus.py
tests/storage/: test_file_store.py
vdb_alchemy/databases/: graph_database.py
(+42 files in other folders)
