[project]
name = "vdb-alchemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoc-markdown>=4.8.2",
    "pydoc-mintlify",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "mintlify*",
]

[tool.uv.sources]
pydoc-mintlify = { path = "../../../Projects/pydoc-mintlify", editable = true }
