[project]
name = "mo-retrievers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aenum>=3.1.16",
    "duckdb>=1.4.3",
    "immutables>=0.21",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "modaic>=0.7.2",
    "more-itertools>=10.8.0",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pydoc-markdown>=4.8.2",
    "pymilvus[milvus_lite]>=2.6.5",
    "sqlalchemy>=2.0.45",
]



[tool.uv.sources]
pydoc-mintlify = { path = "../../../Projects/pydoc-mintlify", editable = true }


[dependency-groups]
dev = [
    "pydoc-markdown>=4.8.2",
    "pydoc-mintlify>=0.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

examples = [
    "langchain-text-splitters>=0.3.9",
    "pinecone>=7.3.0",
]


[project.optional-dependencies]
graph = [
    "gqlalchemy>=1.8.0",
    "pymgclient>=1.5.1",
]

pinecone = ["pinecone>=7.3.0"]

[pytest]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["retrievers"]

[tool.hatch.build.targets.wheel]
packages = ["retrievers"]
